--- a/DashboardPrimefaces/src/main/webapp/WEB-INF/web.xml
+++ b/DashboardPrimefaces/src/main/webapp/WEB-INF/web.xml
@@ -4,4 +4,11 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+  <context-param>
+		<param-name>primefaces.THEME</param-name>
+		<param-value>bluesky</param-value>
+	</context-param>
+	<welcome-file-list>
+		<welcome-file>faces/home.xhtml</welcome-file>
+	</welcome-file-list>
 </web-app>
